# galaxy-xai

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: build.yml  ci.yml  drift-retrain.yml
load/: locustfile.py
models/: README.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: galaxyserve.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
src/: __init__.py  build_reference.py  config.py  data.py  eval_gate.py  evaluate.py  metrics.py  model.py  monitoring.py  predict.py  promote.py  register_model.py  registry.py  retrain.py  schemas.py  service.py  settings.py  simulate_traffic.py  train.py
tests/: test_model.py  test_monitoring.py  test_registry.py  test_service.py
