[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "galaxyserve"
version = "0.1.0"
description = "Production MLOps loop for a galaxy morphology CNN: serve, track, monitor, drift-detect, and auto-retrain a ResNet-18 Smooth/Featured classifier."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Archit Rathod" },
    { name = "Gargi Sathe" },
]
license = { text = "MIT" }

# Core runtime deps needed to load the model and run inference.
# torch/torchvision pull the CPU build from PyPI on Windows by default.
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "pillow>=10.0",
    "numpy>=1.26,<2.0",
    "pydantic>=2.6",
]

[project.optional-dependencies]
# Inference service (Phase 1)
serve = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20",
    "pydantic-settings>=2.2",
]
# Experiment tracking + model registry (Phase 2)
track = [
    "mlflow>=2.12",
]
# Training / retraining (Phase 0+, full data path)
train = [
    "datasets>=2.18",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
]
# Drift / monitoring (Phase 3)
monitor = [
    "evidently>=0.4.25",
    "pandas>=2.2",
]
# Load testing (Phase 5)
load = [
    "locust>=2.25",
]
# Dev tooling (CI)
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",
]

[project.scripts]
galaxy-predict = "src.predict:main"

[tool.setuptools]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter; long strings are fine

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
